test/programs/invalid/analyzer/ThisOutsideOfClass.lox
fun myFunc() {
    return this; // error
}

print this; // error

myFunc();
